fix footer and grid on mobile

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ h1 {
 
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 5px;
     justify-items: center;
     align-items: center;
@@ -131,7 +131,7 @@ h1 {
 
 @media (max-width: 1300px) {
     #grid-container {
-        max-width: 900px;
+        max-width: 80%;
     }
 }
 
@@ -195,8 +195,9 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: fit-content;
     width: 100%;
+    padding-top: 30px;
     background-color: #353535;
 }
 
